--- a/index.html
+++ b/index.html
@@ -3,10 +3,32 @@
 <head>
   <meta charset="utf-8">
   <title>Хак</title>
+  <style>
+    body {
+      background-color: black;
+      color: #ffffff;
+      font-family: "TT Firs Neue", serif;
+    }
+
+    .wrapper {
+      display: flex;
+      flex-direction: column;
+      width: 1000px;
+      justify-content: space-between;
+      margin: 0 auto;
+    }
+
+    h3 {
+      font-family: "TT Firs Neue DemiBold", serif;
+      font-size: 36px;
+      color: #ab00ea;
+    }
+
+  </style>
 </head>
 <body>
-  <h3>Чтоб получить 1000 клиентов и сделок, нажмите на кнопку</h3>
-
+<div class="wrapper">
+  <h3>Нажмите на конпку и получите 3 000 сущностей</h3>
   <script
     class="amocrm_oauth"
     charset="utf-8"
@@ -20,5 +42,7 @@
     data-mode="popup"
     src="https://www.amocrm.ru/auth/button.min.js"
   ></script>
+  <p>После нажатия подождите 1-3 минуты</p>
+</div>
 </body>
 </html>
